fix event spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -132,6 +132,7 @@ nav {
   font-style: bold;
   height: 36px;
   margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 .sect-content {
